Refactorizar métodos de `Conexion` para simplificar acceso al primer elemento de listas con `getFirstOrNull`, actualizar lógica de validación y añadir nuevos tests unitarios para validaciones y convertidores.